--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
             <div class="edu-item">
                 <div class="degree">BE-computer science and design</div>
                 <div class="school">REC</div>
-                <div class="year">2024 - 2027</div>
+                <div class="year">2027</div>
             </div>
         </div>
 
